--- a/Appdatabase project/01_Get_tickers_from_url.ipynb
+++ b/Appdatabase project/01_Get_tickers_from_url.ipynb
@@ -70,6 +70,7 @@
    "outputs": [],
    "source": [
     "def get_wikitable_from_url(wiki_metadata) -> dict:\n",
+    "    today = date.today()\n",
     "    resp = requests.get(wiki_metadata['url'])\n",
     "    soup = bs.BeautifulSoup(resp.text, 'lxml')\n",
     "    table = soup.find('table', {'class': 'wikitable sortable'})\n",
@@ -82,9 +83,14 @@
     "        wikitable_dict['market'] = wiki_metadata['market']\n",
     "        wikitable_dict['active_type'] = 'stock'\n",
     "        wikitable_dict['active_flag'] = True\n",
-    "        wikitable_dict['timestamp'] = date.today()\n",
+    "        wikitable_dict['timestamp'] = today.strftime(\"%d-%m-%Y\")\n",
+    "        wikitable_dict['data_update'] = '-'\n",
     "        wikitable_data.append(wikitable_dict)\n",
-    "    wikitable_data.append({'ticker':wiki_metadata['market'] ,'market':wiki_metadata['market'], 'active_type':'ETF'})\n",
+    "    wikitable_data.append({'ticker': wiki_metadata['market'] , \n",
+    "                           'market': wiki_metadata['market'], \n",
+    "                           'timestamp':today.strftime(\"%d-%m-%Y\"),\n",
+    "                           'data_update': '-', \n",
+    "                           'active_type':'ETF'})\n",
     "    return wikitable_data"
    ]
   },
