--- a/Appdatabase project/02_ParseTickers.ipynb
+++ b/Appdatabase project/02_ParseTickers.ipynb
@@ -70,10 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ndef get_wikitable_from_url(wiki_metadata) -> dict:\\n    resp = requests.get(wiki_metadata['url'])\\n    soup = bs.BeautifulSoup(resp.text, 'lxml')\\n    table = soup.find('table', {'class': 'wikitable sortable'})\\n    wikitable_data = []\\n    for row in table.findAll('tr')[1:]:\\n        wikitable_dict = {}\\n        for key in wiki_metadata['pos_table']:\\n            data = row.findAll('td')[wiki_metadata['pos_table'][key]].text\\n            wikitable_dict[key] = data.strip()\\n        wikitable_dict['market'] = wiki_metadata['market']\\n        wikitable_dict['active_type'] = 'stock'\\n        wikitable_data.append(wikitable_dict)\\n    wikitable_data.append({'ticker':wiki_metadata['market'] ,'market':wiki_metadata['market'], 'active_type':'ETF'})\\n    return wikitable_data\\n\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
     "def get_wikitable_from_url(wiki_metadata) -> dict:\n",
     "    resp = requests.get(wiki_metadata['url'])\n",
     "    soup = bs.BeautifulSoup(resp.text, 'lxml')\n",
@@ -88,6 +100,38 @@
     "        wikitable_dict['active_type'] = 'stock'\n",
     "        wikitable_data.append(wikitable_dict)\n",
     "    wikitable_data.append({'ticker':wiki_metadata['market'] ,'market':wiki_metadata['market'], 'active_type':'ETF'})\n",
+    "    return wikitable_data\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_wikitable_from_url(wiki_metadata) -> dict:\n",
+    "    today = date.today()\n",
+    "    resp = requests.get(wiki_metadata['url'])\n",
+    "    soup = bs.BeautifulSoup(resp.text, 'lxml')\n",
+    "    table = soup.find('table', {'class': 'wikitable sortable'})\n",
+    "    wikitable_data = []\n",
+    "    for row in table.findAll('tr')[1:]:\n",
+    "        wikitable_dict = {}\n",
+    "        for key in wiki_metadata['pos_table']:\n",
+    "            data = row.findAll('td')[wiki_metadata['pos_table'][key]].text\n",
+    "            wikitable_dict[key] = data.strip()\n",
+    "        wikitable_dict['market'] = wiki_metadata['market']\n",
+    "        wikitable_dict['active_type'] = 'stock'\n",
+    "        wikitable_dict['active_flag'] = True\n",
+    "        wikitable_dict['timestamp'] = today.strftime(\"%d-%m-%Y\")\n",
+    "        wikitable_dict['data_update'] = '-'\n",
+    "        wikitable_data.append(wikitable_dict)\n",
+    "    wikitable_data.append({'ticker': wiki_metadata['market'] , \n",
+    "                           'market': wiki_metadata['market'], \n",
+    "                           'timestamp':today.strftime(\"%d-%m-%Y\"),\n",
+    "                           'data_update': '-', \n",
+    "                           'active_type':'ETF'})\n",
     "    return wikitable_data"
    ]
   },
