--- a/Appdatabase project/03_Housekeeper_class.ipynb
+++ b/Appdatabase project/03_Housekeeper_class.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from os import path \n",
+    "import csv\n",
     "import json\n",
     "import shutil\n",
     "\n",
@@ -106,7 +107,7 @@
     "    \n",
     "    \n",
     "    @staticmethod\n",
-    "    def list_dict_to_json(dir_list,upper_stages,file_name, dictionary_list):\n",
+    "    def list_dict_to_json(dir_list,upper_stages,file_name, dictionary_list): #FIX cambiar el nombre a save_json_in_nest_dir\n",
     "        parent_dir_path = data_housekeeper.create_nested_dir_in_parent_dir(dir_list,upper_stages)\n",
     "        print('parent_dir_path: ', parent_dir_path)\n",
     "        print('dir_list: ', dir_list)\n",
@@ -116,16 +117,62 @@
     "            json.dump(dictionary_list, json_file, indent=4)\n",
     "\n",
     "    @staticmethod\n",
-    "    def load_json_to_list(dir_list, file_name):\n",
+    "    def load_json_to_list(dir_list, file_name): #FIX cambiar el nombre a load_json_from_nest_dir \n",
     "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
     "        print(relative_file_path_)\n",
     "        with open(relative_file_path_) as json_file:\n",
     "            data = json.load(json_file)\n",
     "        return data\n",
-    "\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def list_to_csv(dir_list, upper_stages, file_name, data):\n",
+    "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
+    "        print(relative_file_path_)\n",
+    "        with open(relative_file_path_, 'w', newline='') as file:\n",
+    "            write = csv.writer(file)\n",
+    "            write.writerows(data)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def df_to_csv(dir_list, upper_stages, file_name, data):\n",
+    "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name) + '.csv'\n",
+    "        print(relative_file_path_)\n",
+    "        data.to_csv(relative_file_path_)\n",
+    "            \n",
+    "        \n",
     "def instance_class():\n",
     "    myHousekeeper = data_housekeeper()\n",
     "    return myHousekeeper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nnums =  [[10,20,30],\\n        [40,50,60],\\n        [70,80,90]]\\nmypath3 = 'data_file/number.csv'\\nfile = open(mypath3, 'w')\\n\\nwith file:\\n    write = csv.writer(file)\\n    write.writerows(nums) # Rather than iterating over the individual rows, and then writing them to the file using the write.row function, we simply call the write.rows funtcion with an S in order\\n\\n\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "nums =  [[10,20,30],\n",
+    "        [40,50,60],\n",
+    "        [70,80,90]]\n",
+    "mypath3 = 'data_file/number.csv'\n",
+    "file = open(mypath3, 'w')\n",
+    "\n",
+    "with file:\n",
+    "    write = csv.writer(file)\n",
+    "    write.writerows(nums) # Rather than iterating over the individual rows, and then writing them to the file using the write.row function, we simply call the write.rows funtcion with an S in order\n",
+    "\n",
+    "'''"
    ]
   },
   {
@@ -137,7 +184,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "\n",
+    "data_csv = yf.download('ACX.MC')\n",
+    "data_csv.insert(loc=0, column='Date', value=pd.to_datetime(data_csv.index, errors='coerce'))\n",
+    "data_csv['Date'] = [time.date() for time in data_csv['Date']]\n",
+    "data_csv.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Config parameters to save\n",
+    "dir_list = ['Data', 'Tickers']\n",
+    "upper_stages = 0\n",
+    "file_name = 'data_df.csv'\n",
+    "data = data_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_to_csv(dir_list, upper_stages, file_name, data):\n",
+    "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
+    "        print(relative_file_path_)\n",
+    "        #Dataframe\n",
+    "        data.to_csv(relative_file_path_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nested_dir_path:  /Data/Tickers\n",
+      "./Data/Tickers/data_df.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_to_csv(dir_list, upper_stages, file_name, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aprender a subir de directorio en la ruta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Development layer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums =  [[10,20,30],\n",
+    "        [40,50,60],\n",
+    "        [70,80,90]]\n",
+    "\n",
+    "def list_to_csv(dir_list, upper_stages, file_name, data):\n",
+    "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
+    "        print(relative_file_path_)\n",
+    "        with open(relative_file_path_, 'w', newline='') as file:\n",
+    "            write = csv.writer(file)\n",
+    "            write.writerows(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nested_dir_path:  /Data/Tickers\n",
+      "./Data/Tickers/data_1.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_housekeeper.list_to_csv(dir_list, upper_stages, file_name, nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +349,6 @@
      "output_type": "stream",
      "text": [
       "Root dir:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
-      "Creating dir:  ./Data./Tickers\n",
       "parent_dir_path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
       "dir_list:  ['Data', 'Tickers']\n",
       "nested_dir_path:  /Data/Tickers\n",
@@ -172,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +384,7 @@
        "  'key23': {'subkey231': 'subvalue231'}}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,56 +392,6 @@
    "source": [
     "data = data_housekeeper.load_json_to_list(dir_list, file_name)\n",
     "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating dir:  ./Data\n",
-      "Creating dir:  ./Data./Ticker\n"
-     ]
-    }
-   ],
-   "source": [
-    "data_housekeeper.create_nested_dir(['Data', 'Ticker'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_tickers_list(self):\n",
-    "        # Guarda la ticker list. Guarda en JSON.\n",
-    "        print(\"Save tickers list\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Aprender a subir de directorio en la ruta"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Development layer "
    ]
   },
   {
