--- a/Appdatabase project/01_Get_tickers_from_url.ipynb
+++ b/Appdatabase project/01_Get_tickers_from_url.ipynb
@@ -84,7 +84,7 @@
     "        wikitable_dict['active_type'] = 'stock'\n",
     "        wikitable_dict['active_flag'] = True\n",
     "        wikitable_dict['timestamp'] = today.strftime(\"%d-%m-%Y\")\n",
-    "        wikitable_dict['data_update'] = '-'\n",
+    "        wikitable_dict['data_update'] = None\n",
     "        wikitable_data.append(wikitable_dict)\n",
     "    wikitable_data.append({'ticker': wiki_metadata['market'] , \n",
     "                           'market': wiki_metadata['market'], \n",
