--- a/Appdatabase project/03_Housekeeper_class.ipynb
+++ b/Appdatabase project/03_Housekeeper_class.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from os import path \n",
+    "import pandas as pd\n",
     "import csv\n",
     "import json\n",
     "import shutil\n",
@@ -70,7 +71,7 @@
     "    @staticmethod\n",
     "    def create_file_path_in_nested_dir(dir_list, file_name):\n",
     "        nested_dir_path_ = data_housekeeper.create_nested_dir_path(dir_list)\n",
-    "        print('nested_dir_path: ', nested_dir_path_)\n",
+    "        #print('nested_dir_path: ', nested_dir_path_)\n",
     "        file_path_in_nested_dir_ = nested_dir_path_ + '/' + file_name\n",
     "        return file_path_in_nested_dir_\n",
     "    \n",
@@ -107,7 +108,7 @@
     "    \n",
     "    \n",
     "    @staticmethod\n",
-    "    def list_dict_to_json(dir_list,upper_stages,file_name, dictionary_list): #FIX cambiar el nombre a save_json_in_nest_dir\n",
+    "    def list_dict_to_json(dir_list,upper_stages,file_name, dictionary_list): \n",
     "        parent_dir_path = data_housekeeper.create_nested_dir_in_parent_dir(dir_list,upper_stages)\n",
     "        print('parent_dir_path: ', parent_dir_path)\n",
     "        print('dir_list: ', dir_list)\n",
@@ -117,7 +118,7 @@
     "            json.dump(dictionary_list, json_file, indent=4)\n",
     "\n",
     "    @staticmethod\n",
-    "    def load_json_to_list(dir_list, file_name): #FIX cambiar el nombre a load_json_from_nest_dir \n",
+    "    def load_json_to_list(dir_list, file_name): #FIX cambiar el nombre a json_to_list \n",
     "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name)\n",
     "        print(relative_file_path_)\n",
     "        with open(relative_file_path_) as json_file:\n",
@@ -137,6 +138,12 @@
     "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name) + '.csv'\n",
     "        print(relative_file_path_)\n",
     "        data.to_csv(relative_file_path_)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def csv_to_df(dir_list, file_name):\n",
+    "        relative_file_path_ = '.' + data_housekeeper.create_file_path_in_nested_dir(dir_list, file_name) + '.csv'\n",
+    "        print(relative_file_path_)\n",
+    "        return pd.read_csv(relative_file_path_)\n",
     "            \n",
     "        \n",
     "def instance_class():\n",
@@ -146,20 +153,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./Data/Tickers/Dummy1/ANA.MC.TT.csv\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2000-01-03</td>\n",
+       "      <td>55.599998</td>\n",
+       "      <td>57.049999</td>\n",
+       "      <td>54.500000</td>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>0.068148</td>\n",
+       "      <td>184093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2000-01-04</td>\n",
+       "      <td>56.500000</td>\n",
+       "      <td>56.500000</td>\n",
+       "      <td>52.099998</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>0.063366</td>\n",
+       "      <td>192154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2000-01-05</td>\n",
+       "      <td>52.099998</td>\n",
+       "      <td>52.099998</td>\n",
+       "      <td>50.349998</td>\n",
+       "      <td>50.750000</td>\n",
+       "      <td>0.060676</td>\n",
+       "      <td>86948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2000-01-07</td>\n",
+       "      <td>50.900002</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>50.049999</td>\n",
+       "      <td>52.400002</td>\n",
+       "      <td>0.062648</td>\n",
+       "      <td>111870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2000-01-10</td>\n",
+       "      <td>52.150002</td>\n",
+       "      <td>53.400002</td>\n",
+       "      <td>51.250000</td>\n",
+       "      <td>52.500000</td>\n",
+       "      <td>0.062768</td>\n",
+       "      <td>149926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5385</th>\n",
+       "      <td>5385</td>\n",
+       "      <td>2021-03-26</td>\n",
+       "      <td>139.600006</td>\n",
+       "      <td>141.399994</td>\n",
+       "      <td>138.500000</td>\n",
+       "      <td>140.699997</td>\n",
+       "      <td>140.699997</td>\n",
+       "      <td>125694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5386</th>\n",
+       "      <td>5386</td>\n",
+       "      <td>2021-03-29</td>\n",
+       "      <td>140.600006</td>\n",
+       "      <td>141.399994</td>\n",
+       "      <td>138.699997</td>\n",
+       "      <td>140.800003</td>\n",
+       "      <td>140.800003</td>\n",
+       "      <td>154630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5387</th>\n",
+       "      <td>5387</td>\n",
+       "      <td>2021-03-30</td>\n",
+       "      <td>140.800003</td>\n",
+       "      <td>143.199997</td>\n",
+       "      <td>139.600006</td>\n",
+       "      <td>142.399994</td>\n",
+       "      <td>142.399994</td>\n",
+       "      <td>134488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5388</th>\n",
+       "      <td>5388</td>\n",
+       "      <td>2021-03-31</td>\n",
+       "      <td>142.899994</td>\n",
+       "      <td>145.800003</td>\n",
+       "      <td>141.899994</td>\n",
+       "      <td>142.899994</td>\n",
+       "      <td>142.899994</td>\n",
+       "      <td>115726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5389</th>\n",
+       "      <td>5389</td>\n",
+       "      <td>2021-04-01</td>\n",
+       "      <td>142.399994</td>\n",
+       "      <td>144.199997</td>\n",
+       "      <td>141.899994</td>\n",
+       "      <td>142.899994</td>\n",
+       "      <td>142.899994</td>\n",
+       "      <td>26549</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5390 rows × 8 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "\"\\nnums =  [[10,20,30],\\n        [40,50,60],\\n        [70,80,90]]\\nmypath3 = 'data_file/number.csv'\\nfile = open(mypath3, 'w')\\n\\nwith file:\\n    write = csv.writer(file)\\n    write.writerows(nums) # Rather than iterating over the individual rows, and then writing them to the file using the write.row function, we simply call the write.rows funtcion with an S in order\\n\\n\""
+       "      Unnamed: 0        Date        Open        High         Low       Close  \\\n",
+       "0              0  2000-01-03   55.599998   57.049999   54.500000   57.000000   \n",
+       "1              1  2000-01-04   56.500000   56.500000   52.099998   53.000000   \n",
+       "2              2  2000-01-05   52.099998   52.099998   50.349998   50.750000   \n",
+       "3              3  2000-01-07   50.900002   53.000000   50.049999   52.400002   \n",
+       "4              4  2000-01-10   52.150002   53.400002   51.250000   52.500000   \n",
+       "...          ...         ...         ...         ...         ...         ...   \n",
+       "5385        5385  2021-03-26  139.600006  141.399994  138.500000  140.699997   \n",
+       "5386        5386  2021-03-29  140.600006  141.399994  138.699997  140.800003   \n",
+       "5387        5387  2021-03-30  140.800003  143.199997  139.600006  142.399994   \n",
+       "5388        5388  2021-03-31  142.899994  145.800003  141.899994  142.899994   \n",
+       "5389        5389  2021-04-01  142.399994  144.199997  141.899994  142.899994   \n",
+       "\n",
+       "       Adj Close  Volume  \n",
+       "0       0.068148  184093  \n",
+       "1       0.063366  192154  \n",
+       "2       0.060676   86948  \n",
+       "3       0.062648  111870  \n",
+       "4       0.062768  149926  \n",
+       "...          ...     ...  \n",
+       "5385  140.699997  125694  \n",
+       "5386  140.800003  154630  \n",
+       "5387  142.399994  134488  \n",
+       "5388  142.899994  115726  \n",
+       "5389  142.899994   26549  \n",
+       "\n",
+       "[5390 rows x 8 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "DH = data_housekeeper()\n",
+    "DH.csv_to_df(['Data', 'Tickers', 'Dummy1'],'ANA.MC.TT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "nums =  [[10,20,30],\n",
@@ -191,17 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
@@ -214,27 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,18 +447,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nested_dir_path:  /Data/Tickers\n",
-      "./Data/Tickers/data_df.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_to_csv(dir_list, upper_stages, file_name, data)"
    ]
@@ -292,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,25 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nested_dir_path:  /Data/Tickers\n",
-      "./Data/Tickers/data_1.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_housekeeper.list_to_csv(dir_list, upper_stages, file_name, nums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,54 +510,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root dir:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
-      "parent_dir_path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project\n",
-      "dir_list:  ['Data', 'Tickers']\n",
-      "nested_dir_path:  /Data/Tickers\n",
-      "file path:  C:\\Users\\alvaro\\Repos\\Python_knowledge\\Appdatabase project/Data/Tickers/tickers_test.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_housekeeper.list_dict_to_json(dir_list,upper_stages,file_name,dictionary_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nested_dir_path:  /Data/Tickers\n",
-      "./Data/Tickers/tickers_test.json\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'key11': 'value11',\n",
-       "  'key12': 'value12',\n",
-       "  'key13': {'subkey131': 'subvalue131'}},\n",
-       " {'key21': 'value21',\n",
-       "  'key22': 'value22',\n",
-       "  'key23': {'subkey231': 'subvalue231'}}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = data_housekeeper.load_json_to_list(dir_list, file_name)\n",
     "data"
@@ -396,21 +529,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data_housekeeper' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-21df3358cee3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmyPath\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mdata_housekeeper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_nested_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Data'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Tickers'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmyPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data_housekeeper' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myPath =data_housekeeper.create_nested_path(['Data', 'Tickers'])\n",
     "myPath"
@@ -418,18 +539,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating dir:  ./Data\n",
-      "Creating dir:  ./Data./Tickers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_housekeeper.create_nested_dir(['Data', 'Tickers'])"
    ]
