--- a/Appdatabase project/10-AppdatabaseModule_tickers.ipynb
+++ b/Appdatabase project/10-AppdatabaseModule_tickers.ipynb
@@ -4,123 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modulo appdata"
+    "# Modulo appdata: Tickermanager"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ParseTicker"
+    "### TickerManager abstract module"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BaseParser():\n",
-    "    \n",
-    "    def __init__(self, source, target):\n",
-    "        self.__source = source\n",
-    "        self.__target = target\n",
-    "        self.__exceptions ={('Wiki','YahooFinance'):{'IBEX35': '^IBEX','CAC40': '^FCHI','DAX30': '^GDAXI', 'SP500':'^GSPC'},\n",
-    "                            ('Wiki', 'Ticker_Key'):{'IBEX35': '^IBEX.TT','CAC40': '^FCHI.TT','DAX30': '^GDAXI.TT', 'SP500':'^GSPC.TT'},\n",
-    "                            ('Wiki','AlphaVantage'):{}}\n",
-    "        \n",
-    "    def get_exceptions(self):\n",
-    "        return self.__exceptions\n",
-    "    \n",
-    "    def set_source(self, source):\n",
-    "        print(\"Set ticker source in parser\")\n",
-    "        self.__source = source\n",
-    "    \n",
-    "    def get_source(self):\n",
-    "        return self.__source\n",
-    "    \n",
-    "    def set_target(self, target):\n",
-    "        print(\"Set ticker target in parser\")\n",
-    "        self.__target = target\n",
-    "    \n",
-    "    def get_target(self):\n",
-    "        return self.__target\n",
-    "       \n",
-    "    def parse(self, name, prefix, suffix, excedent_string):\n",
-    "        key_tuple = (self.__source,self.__target) # Tuple key to select Source-Target exceptions\n",
-    "        exception_dict = self.__exceptions.get(key_tuple, {}) #FIX inform not properly loaded. Mirar longitud del dict.\n",
-    "\n",
-    "        if name in exception_dict:\n",
-    "            return exception_dict.get(name, name) \n",
-    "        \n",
-    "        name = name.replace(excedent_string,'')\n",
-    "        return prefix + name + suffix\n",
-    "    \n",
-    "    def parse_markets(self, raw_ticker, parser_keys): # Feeds tickers for Yahoo finance downloader based on market. Uses parse from BaseParser\n",
-    "        try:\n",
-    "            return self.parse(raw_ticker['ticker'], \n",
-    "                     parser_keys[('market', raw_ticker['market'])]['prefix'],\n",
-    "                     parser_keys[('market', raw_ticker['market'])]['suffix'],\n",
-    "                     parser_keys[('market', raw_ticker['market'])]['excedent_string'])\n",
-    "        except:\n",
-    "            return raw_ticker['ticker']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class WikiToYahooFinance_Parser(BaseParser):\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        super().__init__(source='Wiki', target='YahooFinance')\n",
-    "        \n",
-    "        self.__parser_keys_feed = {('market','IBEX35'):{'prefix':'','suffix':'.MC','excedent_string':''},\n",
-    "                              ('market','CAC40'):{'prefix':'','suffix':'.PA','excedent_string':'Euronext: '},\n",
-    "                              ('market','DAX30'):{'prefix':'','suffix':'.DE', 'excedent_string':''},\n",
-    "                              ('market','SP500'):{'prefix':'','suffix':'', 'excedent_string':''}}\n",
-    "        \n",
-    "        \n",
-    "    def feeder_ticker(self,feed_ticker): # Appends feeds to original dictionary, under 'feeds' label. Uses parse_market.\n",
-    "        feed_ticker['feeds'] = {'name':self.get_target(),'ticker':self.parse_markets(feed_ticker, self.__parser_keys_feed)} #Feeds\n",
-    "        return feed_ticker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class WikiToTickerKey_Parser(BaseParser):\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        super().__init__(source='Wiki', target='YahooFinance')\n",
-    "        \n",
-    "        self.__parser_keys_tickerKey = {('market','IBEX35'):{'prefix':'','suffix':'.MC.TT','excedent_string':''},\n",
-    "                                        ('market','CAC40') :{'prefix':'','suffix':'.PA.TT','excedent_string':'Euronext: '},\n",
-    "                                        ('market','DAX30') :{'prefix':'','suffix':'.DE.TT', 'excedent_string':''},\n",
-    "                                        ('market','SP500') :{'prefix':'','suffix':'', 'excedent_string':''}}\n",
-    "        \n",
-    "    def feeder_ticker(self,feed_ticker): # Appends feeds to original dictionary, under 'feeds' label. Uses parse_market.\n",
-    "        feed_ticker['tickerKey'] = self.parse_markets(feed_ticker, self.__parser_keys_tickerKey)\n",
-    "        return feed_ticker\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TickerManager module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +196,7 @@
     "        wikitable_data.append({'ticker': wiki_metadata['market'] , \n",
     "                               'market': wiki_metadata['market'], \n",
     "                               'timestamp':today.strftime(\"%d-%m-%Y\"),\n",
-    "                               'data_update': '-', \n",
+    "                               'data_update': None, \n",
     "                               'active_type':'ETF'})\n",
     "        return wikitable_data\n",
     "    \n",
@@ -396,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
